--- a/reset.css
+++ b/reset.css
@@ -112,7 +112,7 @@ body {
   line-height: 1;
   color: white;
   background-color: black;
-  font-family: "Inter", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 ol,
 ul {
